test/Fail/Issue4267a.err
Issue4267a.agda:4.7-24: error: [NoKnownRecordWithSuchFields]
There is no known record with the field f
when checking that the expression record { f = Set } has type _1
